--- a/siswa.html
+++ b/siswa.html
@@ -200,7 +200,7 @@
     <h2>Bocah-bocah PPLG X-2</h2>
     <div class="profiles">
       <div class="profile-card">
-        <img src="WIN_20250923_07_27_49_Pro.jpg" alt="Ketua">
+        <img src="#" alt="Ketua">
         <h3>Ketua Kelas</h3>
         <p>Nama Ketua Kelas</p>
         <div class="overlay">Bertanggung jawab memimpin kelas</div>
@@ -218,7 +218,7 @@
         <div class="overlay">Mengatur keuangan kelas</div>
       </div>
       <div class="profile-card">
-        <img src="WIN_20250923_07_27_49_Pro.jpg" alt="Anggota">
+        <img src="#" alt="Anggota">
         <h3>Anggota</h3>
         <p>Nama Anggota 1</p>
         <div class="overlay">Mendukung kegiatan kelas</div>
@@ -236,7 +236,7 @@
         <div class="overlay">Mendukung kegiatan kelas</div>
       </div>
       <div class="profile-card">
-        <img src="WIN_20250923_07_27_49_Pro.jpg" alt="Anggota">
+        <img src="#" alt="Anggota">
         <h3>Anggota</h3>
         <p>Nama Anggota 3</p>
         <div class="overlay">Mendukung kegiatan kelas</div>
