--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   <div class="hero-text">
     <h2>PPLG X-2</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis libero unde aperiam, ut porro quisquam aut in sit doloribus velit, autem minus facere facilis consequatur veritatis repellendus esse, necessitatibus atque.</p>
-    <a href="#visi-misi" class="btn">Kenali Kami</a>
+    <a href="https://www.instagram.com/pplg.xtwo__/" class="btn">Kenali Kami</a>
   </div>
   <div class="hero-img">
     <!-- pastiin file foto ada di folder yang sama, kalau di folder img ubah jadi src="img/WIN_20250923_07_27_49_Pro.jpg" -->
