update-foto-siswa-2

--- a/siswa.html
+++ b/siswa.html
@@ -231,7 +231,7 @@
           <div class="overlay">Jangan banyak makan yang manis, karna yg manis udah ada disini</div>
         </div>
         <div class="profile-card">
-          <img src="assets/iqbal.jpg" alt="Anggota" />
+          <img src="assets/iqbal2.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Iqbal</p>
           <div class="overlay">Modol, Hidup cuman sekali</div>
@@ -272,7 +272,7 @@
         <div class="profile-card">
           <img src="assets/giyas.jpg" alt="Anggota" />
           <h3>Anggota</h3>
-          <p>Nama Anggota 3</p>
+          <p>Giyas</p>
           <div class="overlay">aku hanya berhasil menjalani hari tanpa mu, tapi perihal menghapus mu dari ingatan ku, aku segagal itu.</div>
         </div>
         <div class="profile-card">
@@ -318,22 +318,22 @@
           <div class="overlay"></div>
         </div>
         <div class="profile-card">
-          <img src="" alt="Anggota" />
+          <img src="assets/rivaldi.jpg" alt="Anggota" />
           <h3>Anggota</h3>
-          <p>Nama Anggota 3</p>
-          <div class="overlay"></div>
+          <p>Rivaldi</p>
+          <div class="overlay">Pengen Jadi Millionaire</div>
         </div>
         <div class="profile-card">
-          <img src="" alt="Anggota" />
+          <img src="assets/hannan.jpg" alt="Anggota" />
           <h3>Anggota</h3>
-          <p>Nama Anggota 3</p>
-          <div class="overlay"></div>
+          <p>Amuhh</p>
+          <div class="overlay">berharap sama wanita sama saja seperti mempercayai besok akan ada senja yang cerah di sore hari</div>
         </div>
         <div class="profile-card">
-          <img src="" alt="Anggota" />
+          <img src="assets/yazid.jpg" alt="Anggota" />
           <h3>Anggota</h3>
-          <p>Nama Anggota 3</p>
-          <div class="overlay"></div>
+          <p>Yazid</p>
+          <div class="overlay">menyala seperti api unggun</div>
         </div>
         <div class="profile-card">
           <img src="" alt="Anggota" />
