update-foto-siswa-3

--- a/siswa.html
+++ b/siswa.html
@@ -86,7 +86,6 @@
         transform: scaleX(1);
       }
 
-      /* Section */
       section {
         padding: 8rem 10% 4rem;
       }
@@ -98,14 +97,12 @@
         color: var(--primary);
       }
 
-      /* Profiles Grid */
       .profiles {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 2rem;
       }
 
-      /* Profile Card */
       .profile-card {
         background: white;
         border-radius: 14px;
@@ -150,7 +147,6 @@
         color: #475569;
       }
 
-      /* Hover Overlay (deskripsi tugas) */
       .overlay {
         position: absolute;
         inset: 0;
@@ -172,7 +168,6 @@
         transform: translateY(0);
       }
 
-      /* Footer */
       footer {
         text-align: center;
         padding: 2rem;
@@ -181,7 +176,6 @@
         color: #475569;
       }
 
-      /* Animasi Bounce */
       @keyframes bounceIn {
         0% {
           transform: scale(0.5);
@@ -200,7 +194,7 @@
   <body>
     <!-- Header -->
     <header id="navbar">
-      <h1 class="logo">PPLG X-2<span>.</span></h1>
+      <h1 class="logo">PPLG X-2<span></span></h1>
       <nav>
         <a href="index.html">Home</a>
         <a href="siswa.html">Siswa</a>
@@ -215,7 +209,7 @@
         <div class="profile-card">
           <img src="assets/ketua.jpg" alt="Ketua" />
           <h3>Ketua Kelas</h3>
-          <p>Rafli Yaenal </p>
+          <p>Rafli Yaenal</p>
           <div class="overlay">selalu semangat ingat tujuanmu</div>
         </div>
         <div class="profile-card">
@@ -228,7 +222,9 @@
           <img src="assets/pipit.jpg" alt="Bendahara" />
           <h3>Bendahara</h3>
           <p>Pipit</p>
-          <div class="overlay">Jangan banyak makan yang manis, karna yg manis udah ada disini</div>
+          <div class="overlay">
+            Jangan banyak makan yang manis, karna yg manis udah ada disini
+          </div>
         </div>
         <div class="profile-card">
           <img src="assets/iqbal2.jpg" alt="Anggota" />
@@ -261,25 +257,34 @@
           <img src="assets/satria.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Satria</p>
-          <div class="overlay">Hari Minggu itu weekend tapi kalau cinta kita will never end.</div>
+          <div class="overlay">
+            Hari Minggu itu weekend tapi kalau cinta kita will never end.
+          </div>
         </div>
         <div class="profile-card">
           <img src="assets/yuni.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Yuni</p>
-          <div class="overlay">masa depanmu tergantung pada apa yang kamu lakukan hari ini</div>
+          <div class="overlay">
+            masa depanmu tergantung pada apa yang kamu lakukan hari ini
+          </div>
         </div>
         <div class="profile-card">
           <img src="assets/giyas.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Giyas</p>
-          <div class="overlay">aku hanya berhasil menjalani hari tanpa mu, tapi perihal menghapus mu dari ingatan ku, aku segagal itu.</div>
+          <div class="overlay">
+            aku hanya berhasil menjalani hari tanpa mu, tapi perihal menghapus
+            mu dari ingatan ku, aku segagal itu.
+          </div>
         </div>
         <div class="profile-card">
           <img src="assets/nisa.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Nisa</p>
-          <div class="overlay">apa yang kalian harapkan dari bereskpetasi ke sesama manusia</div>
+          <div class="overlay">
+            apa yang kalian harapkan dari bereskpetasi ke sesama manusia
+          </div>
         </div>
         <div class="profile-card">
           <img src="assets/ubes.jpg" alt="Anggota" />
@@ -297,7 +302,11 @@
           <img src="assets/agha.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Agha</p>
-          <div class="overlay"></div>
+          <div class="overlay">
+            hampa itu seperti Langkah tak berjejak, senja tapi tak jingga, cinta
+            tapi tak di anggap oleh karna itu bila tak kunyatakan keindahanmu
+            dalam kata, kusimpan kasihmu dalama dada
+          </div>
         </div>
         <div class="profile-card">
           <img src="assets/faiz.jpg" alt="Anggota" />
@@ -306,7 +315,7 @@
           <div class="overlay"></div>
         </div>
         <div class="profile-card">
-          <img src="assets/fadlan.jpg" alt="Anggota" />
+          <img src="assets/fadlan2.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Fadlan</p>
           <div class="overlay"></div>
@@ -320,14 +329,17 @@
         <div class="profile-card">
           <img src="assets/rivaldi.jpg" alt="Anggota" />
           <h3>Anggota</h3>
-          <p>Rivaldi</p>
+          <p>Rivaldiy</p>
           <div class="overlay">Pengen Jadi Millionaire</div>
         </div>
         <div class="profile-card">
           <img src="assets/hannan.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Amuhh</p>
-          <div class="overlay">berharap sama wanita sama saja seperti mempercayai besok akan ada senja yang cerah di sore hari</div>
+          <div class="overlay">
+            berharap sama wanita sama saja seperti mempercayai besok akan ada
+            senja yang cerah di sore hari
+          </div>
         </div>
         <div class="profile-card">
           <img src="assets/yazid.jpg" alt="Anggota" />
@@ -336,9 +348,9 @@
           <div class="overlay">menyala seperti api unggun</div>
         </div>
         <div class="profile-card">
-          <img src="" alt="Anggota" />
+          <img src="assets/faisal.jpg" alt="Anggota" />
           <h3>Anggota</h3>
-          <p>Nama Anggota 3</p>
+          <p>Faisal </p>
           <div class="overlay"></div>
         </div>
         <div class="profile-card">
@@ -417,7 +429,7 @@
     </section>
 
     <!-- Footer -->
-    <footer>&copy; 2025 Kelas PPLG | Struktur Organisasi</footer>
+    <footer>&copy; 2025 Kelas PPLG X-2 | Struktur Organisasi</footer>
 
     <!-- Animasi Scroll -->
     <script>
