--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
       .gallery img {
         width: 100%;
-        height: 500px;
+        height: auto;
         object-fit: cover;
         border-radius: 10px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -363,8 +363,8 @@
     <div class="gallery-container">
       <h2>Gallery PPLG X-2</h2>
       <div class="gallery">
-        <img src="assets/barengan.jpg" alt="Foto Kegiatan 1" />
-        <img src="assets/barengan2.jpg" alt="Foto Kegiatan 2" />
+        <img src="assets/ramean.jpg" alt="Foto Kegiatan 1" />
+        <img src="assets/ramean2.jpg" alt="Foto Kegiatan 2" />
       </div>
     </div>
 
