--- a/siswa.html
+++ b/siswa.html
@@ -242,7 +242,7 @@
           <img src="assets/pandu.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Pandu</p>
-          <div class="overlay">Mendukung kegiatan kelas</div>
+          <div class="overlay">Dipikir-pikir ngapain mikir 😹</div>
         </div>
         <div class="profile-card">
           <img src="assets/radit.jpg" alt="Anggota" />
@@ -287,10 +287,10 @@
           </div>
         </div>
         <div class="profile-card">
-          <img src="assets/ubes.jpg" alt="Anggota" />
+          <img src="assets/ubes2.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Fauzan</p>
-          <div class="overlay"></div>
+          <div class="overlay">WIKRAMA UNTUK INDONESIA</div>
         </div>
         <div class="profile-card">
           <img src="assets/aldi.jpg" alt="Anggota" />
@@ -315,7 +315,7 @@
           <div class="overlay"></div>
         </div>
         <div class="profile-card">
-          <img src="assets/fadlan2.jpg" alt="Anggota" />
+          <img src="assets/fadlan3.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Fadlan</p>
           <div class="overlay"></div>
@@ -329,7 +329,7 @@
         <div class="profile-card">
           <img src="assets/rivaldi.jpg" alt="Anggota" />
           <h3>Anggota</h3>
-          <p>Rivaldiy</p>
+          <p>Rivaldy</p>
           <div class="overlay">Pengen Jadi Millionaire</div>
         </div>
         <div class="profile-card">
@@ -337,8 +337,7 @@
           <h3>Anggota</h3>
           <p>Amuhh</p>
           <div class="overlay">
-            berharap sama wanita sama saja seperti mempercayai besok akan ada
-            senja yang cerah di sore hari
+           perlu di warnain pplg gw nih
           </div>
         </div>
         <div class="profile-card">
@@ -350,13 +349,13 @@
         <div class="profile-card">
           <img src="assets/faisal.jpg" alt="Anggota" />
           <h3>Anggota</h3>
-          <p>Faisal </p>
+          <p>Faisal</p>
           <div class="overlay"></div>
         </div>
         <div class="profile-card">
-          <img src="" alt="Anggota" />
+          <img src="assets/acon.jpg" alt="Anggota" />
           <h3>Anggota</h3>
-          <p>Nama Anggota 3</p>
+          <p>Acon</p>
           <div class="overlay"></div>
         </div>
         <div class="profile-card">
