update-foto-bareng

--- a/index.html
+++ b/index.html
@@ -366,6 +366,11 @@
         <img src="assets/ramean.jpg" alt="Foto Kegiatan 1" />
         <img src="assets/ramean2.jpg" alt="Foto Kegiatan 2" />
       </div>
+      <br>
+      <div class="gallery">
+        <img src="assets/kelas.jpg" alt="Foto Kegiatan 1" />
+        <img src="assets/kelas2.jpg" alt="Foto Kegiatan 2" />
+      </div>
     </div>
 
     
