--- a/siswa.html
+++ b/siswa.html
@@ -336,9 +336,7 @@
           <img src="assets/hannan.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Amuhh</p>
-          <div class="overlay">
-           perlu di warnain pplg gw nih
-          </div>
+          <div class="overlay">perlu di warnain pplg gw nih</div>
         </div>
         <div class="profile-card">
           <img src="assets/yazid.jpg" alt="Anggota" />
@@ -350,7 +348,10 @@
           <img src="assets/faisal.jpg" alt="Anggota" />
           <h3>Anggota</h3>
           <p>Faisal</p>
-          <div class="overlay"></div>
+          <div class="overlay">
+            Gaperlu hidup lebih hebat dari orang lain cukup lebih baik dari hari
+            kemarin
+          </div>
         </div>
         <div class="profile-card">
           <img src="assets/acon.jpg" alt="Anggota" />
